--- a/Jobsheet_01.ipynb
+++ b/Jobsheet_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHOXDw9d+cNpnMkVbZRXB2",
+      "authorship_tag": "ABX9TyNEPfllj7i0qdbO2Wi+Av3M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,12 +97,12 @@
         "fig, axes = plt.subplots(1, 3, figsize=(15, 5))"
       ],
       "metadata": {
-        "id": "N_tLiDzy6P5V",
-        "outputId": "a93aec81-c348-4284-c47f-94fb03c2b891",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 451
-        }
+          "height": 245
+        },
+        "id": "N_tLiDzy6P5V",
+        "outputId": "a93aec81-c348-4284-c47f-94fb03c2b891"
       },
       "execution_count": 6,
       "outputs": [
@@ -153,12 +153,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "C5DNscnO7JT9",
-        "outputId": "892ec45b-e810-4106-8df6-340e664bc9a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "C5DNscnO7JT9",
+        "outputId": "892ec45b-e810-4106-8df6-340e664bc9a6"
       },
       "execution_count": 10,
       "outputs": [
@@ -181,6 +181,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Praktikum 2. Citra Digital tersusun dari beberapa pixel"
+      ],
+      "metadata": {
+        "id": "lIt7tUOr8fI3"
+      }
     }
   ]
 }
